[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/characters_overlay/character.gd" type="Script" id=1]
[ext_resource path="res://visuals/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://visuals/avatars/Basic.png" type="Texture" id=3]
[ext_resource path="res://visuals/fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0
height = 0.0

[sub_resource type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BasicAvatar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BasicAvatar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BasicAvatar:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BasicAvatar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -18.424 ), Vector2( 0, -9.607 ), Vector2( 0, -18.424 ), Vector2( 0, -9.607 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BasicAvatar:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0.18, 0.254 ), Vector2( 0.258, 0.186 ), Vector2( 0.18, 0.254 ), Vector2( 0.258, 0.186 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BasicAvatar:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BasicAvatar:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 0.0, 359.9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BasicAvatar:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BasicAvatar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BasicAvatar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -18.424 ), Vector2( 0, -9.607 ), Vector2( 0, -18.424 ), Vector2( 0, -9.607 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BasicAvatar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 7.5, -7.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BasicAvatar:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0.18, 0.254 ), Vector2( 0.258, 0.186 ), Vector2( 0.18, 0.254 ), Vector2( 0.258, 0.186 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 20
outline_size = 2
outline_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 5.0
bg_color = Color( 0.972549, 0.788235, 0.317647, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 19, 19 )

[node name="Character" type="KinematicBody2D" groups=["Characters"]]
collision_layer = 0
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="BasicAvatar" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -13 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Message" type="Label" parent="."]
visible = false
margin_left = -92.0
margin_top = -91.0
margin_right = 95.0
margin_bottom = -32.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 7 )
text = "BLAHBLAHB"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="Message"]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 11 )
anims/jump = SubResource( 9 )
anims/move = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, -4.5 )
scale = Vector2( 2.2, 2.05 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = -60.0
margin_top = -61.0
margin_right = 83.0
margin_bottom = -30.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Lvl" type="Label" parent="GridContainer"]
margin_right = 18.0
margin_bottom = 26.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 10 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="GridContainer"]
margin_left = 22.0
margin_right = 139.0
margin_bottom = 26.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "USERNAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickingArea"]
position = Vector2( 0, -5 )
shape = SubResource( 12 )

[connection signal="input_event" from="." to="." method="_on_Character_input_event"]
[connection signal="timeout" from="Message/MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="input_event" from="PickingArea" to="." method="_on_PickingArea_input_event"]
